# codeforces

./: .gitignore  CMakeLists.txt  Makefile  angry_monk.cpp  books.cpp  compile_commands.json  flake.nix  new_year_candles.cpp  two_buttons.cpp  watermelon.cpp
solutions/: angry_monk.cpp  watermelon.cpp  way_too_long_words.cpp
